--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"parcel-bundler": "^1.12.4"
 	},
 	"scripts": {
-		"dev": "parcel ./public/index.html",
+		"dev": "parcel ./public/index.html --port 3030",
 		"build": "parcel build ./public/index.html"
 	},
 	"resolutions": {
